<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">settings</string>
    <string name="nav_header_subtitle">Change in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="group">BSBO-05-20</string>
    <string name="name">Zarin Nikita</string>

    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_web">Web</string>
    <string name="menu_player">Player</string>
    <string name="menu_sensors">Sensors</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_recorder">Recorder</string>
    <string name="menu_stories">Stories</string>
    <string name="menu_dog">Dog</string>
    <string name="menu_photos">Photos</string>
    <string name="menu_maps">Maps</string>

    <string name="search_bar">Enter request</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="equality">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="division">/</string>
    <string name="clear">C</string>

    <string name="lightSensor">Light</string>
    <string name="pressureSensor">Pressure</string>
    <string name="humiditySensor">Humidity</string>

    <string name="photo">Take a photo!</string>

    <string name="startRecording">Start</string>
    <string name="stopRecording">Stop</string>
    <string name="startAudio">Start recording</string>
    <string name="stopAudio">Stop recording</string>

    <string name="settings_name">Name:</string>
    <string name="settings_name_placeholder">Enter your name</string>
    <string name="settings_group">Group:</string>
    <string name="settings_group_placeholder">Enter your group</string>
    <string name="settings_button">SAVE</string>

    <string name="story_add_title">Story adding</string>
    <string name="story_subject_name">Subject</string>
    <string name="story_text_name">Text</string>
    <string name="story_add_subject_placeholder">Enter Subject</string>
    <string name="story_add_text_placeholder">Enter text</string>
    <string name="story_add_ok">Add</string>
    <string name="story_add_cancel">Cancel</string>

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>

    <string name="new_reminder">Create a new photos</string>
    <string name="reminder_subject_name">Subject</string>
    <string name="reminder_text_name">Text</string>
    <string name="write_here">write here</string>

    <string name="set_points">Set Points</string>
    <string name="draw_route">Draw route</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>