<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_brouser"
            android:icon="@drawable/ic_menu_share"
            android:title="Share" />
        <item
            android:id="@+id/calculator"
            android:icon="@drawable/ic_menu_calculator"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/web"
            android:icon="@drawable/ic_menu_web"
            android:title="@string/menu_web" />
        <item
            android:id="@+id/musicFragment"
            android:icon="@drawable/ic_menu_player"
            android:title="@string/menu_player" />
    </group>
</menu>