<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".practice5.AudioRecorder">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="427dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="223dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/startRecordButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/startAudio" />

                <Button
                    android:id="@+id/stopRecordButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stopAudio" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/startAudio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/startRecording" />

                <Button
                    android:id="@+id/stopAudio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stopRecording" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>